[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
egui_extras = { version = "0.19.0", features = ["image", "svg"] }
image = "0.24.3"
poll-promise = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.42.0", features = ["Win32_Foundation", "Win32_System_Console"]}